# Evolvria

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  components.json  export_presets.cfg  icon.svg.import  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  project.godot  shadcn.json  skills-lock.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
assets/fonts/: NotoSansCJKsc-Regular.otf.import  (+1 more)
docs/: 00-source-research.md  01-product-requirements.md  02-feature-parity-map.md  03-ia-and-user-flows.md  04-visual-design-system.md  05-tauri-2-architecture.md  06-data-model.md  07-ai-narrative-engine.md  08-creator-studio.md  09-chat-vn-dungeon-mind.md  10-backend-sync-api.md  11-monetization-moderation.md  12-security-privacy-legal.md  13-platform-release.md  14-testing-strategy.md  15-roadmap.md  README.md  ai-memory-system.md  data-model.md  development-roadmap.md  development-workflow.md  game-design.md  glosc-one-api-integration.md  godot-client-architecture.md  map-import-and-annotation.md  platform-support.md  product-requirements.md  prompt-and-response-contracts.md  save-load-and-sync.md  security-privacy-content.md  technical-architecture.md  testing-strategy.md  ui-ux-flows.md  visual-direction.md  world-simulation.md
scenes/: ai_response_fixture_test.tscn  app.tscn  remote_glosc_smoke_test.tscn  smoke_test.tscn  ui_breakpoint_test.tscn  visual_screenshot_test.tscn
scripts/: evolvria-mcp.mjs  tauri-dev-server.mjs
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: ai-timeout.test.ts  domain.test.ts  tauri.test.ts
tools/: verify_export_presets.gd  verify_export_presets.gd.uid
(+164 files in other folders)
